# plywood-analyzer

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  report.tex  requirements.txt
analysis/: coverage_collector.py  dep_extractor.py  graph_importer.py  reference_calc.py
data/: coverage.json  coverage_baseline.json  coverage_real.json  coverage_replay.json  dependencies.json  dependencies_real.json  fuzz_stats.json  scan-build-output.txt  test_results.json
docker/: Dockerfile
fuzzing/: run_afl.sh
query_system/: cli.py  query_engine.py  web_app.py
query_system/app/: __init__.py  config.py  errors.py  logging.py
query_system/app/routes/: demo.py  evidence.py  health.py  options.py  query.py  schema.py  source.py  stats.py  ui.py
query_system/app/services/: engine_pool.py  evidence_service.py  options_service.py  source_service.py  stats_service.py
query_system/static/css/: base.css  components.css  panels.css  tokens.css
query_system/static/js/: api.js  evidence.js  highlight.js  main.js  nl.js  options.js  queries.js  schema.js  source.js  stats.js  tabs.js  util.js
query_system/static/js/render/: q1.js  q2.js  q3.js  q4.js
query_system/templates/: index.html
scripts/: check_schema_sync.py  demo_smoke_test.sh  replay_afl_queue.sh  run_pipeline.sh
src/: plywood_calc.cpp
tests/: ai_generated_boundary.txt  ai_generated_edge.txt  ai_generated_overflow.txt  stdin_tests.sh
tests/python/: test_dep_extractor_cross_call.py  test_reference_calc.py
